--- a/package.json
+++ b/package.json
@@ -1,45 +1,28 @@
 {
-  "name": "real-time-chatrooms-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-  "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-  "build": "tsc",
-  "start": "node dist/server.js",
-  "prisma:migrate": "npx prisma migrate dev",
-  "prisma:generate": "npx prisma generate"
+"name": "real-time-chatrooms-api",
+"version": "0.1.0",
+"private": true,
+"scripts": {
+"dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+"build": "tsc -p tsconfig.json",
+"start": "node dist/server.js",
+"prisma:generate": "prisma generate",
+"prisma:migrate": "prisma migrate dev"
 },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MoatazEl-Naggar/real-time-chatrooms-api.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MoatazEl-Naggar/real-time-chatrooms-api/issues"
-  },
-  "homepage": "https://github.com/MoatazEl-Naggar/real-time-chatrooms-api#readme",
-  "description": "",
-  "dependencies": {
-    "@fastify/cors": "^11.1.0",
-    "@fastify/websocket": "^11.2.0",
-    "@prisma/client": "^6.19.0",
-    "dotenv": "^17.2.3",
-    "fastify": "^5.6.2",
-    "ioredis": "^5.8.2",
-    "pino": "^10.1.0",
-    "prisma": "^6.19.0",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
-    "@types/ioredis": "^4.28.10",
-    "@types/node": "^24.10.1",
-    "@types/socket.io": "^3.0.1",
-    "@types/socket.io-client": "^1.4.36",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
-  }
+"dependencies": {
+"fastify": "^4.20.0",
+"fastify-jwt": "^5.0.0",
+"socket.io": "^4.8.0",
+"ioredis": "^5.3.2",
+"@prisma/client": "^5.0.0",
+"zod": "^3.21.4",
+"pino": "^8.0.0"
+},
+"devDependencies": {
+"prisma": "^5.0.0",
+"ts-node-dev": "^2.0.0",
+"typescript": "^5.5.0",
+"ts-node": "^10.9.1",
+"@types/node": "^20.3.0"
+}
 }
